<resources>
    <string name="app_name">EFE-Games</string>

    <string name="numpad">Pad numérico</string>
    <string name="dialog">Popup pad</string>
    <string name="numpad_abbr">Dia</string>
    <string name="dialog_abbr">Pad</string>
    <string name="pad_numerico_1">1</string>
    <string name="pad_numerico_2">2</string>
    <string name="pad_numerico_3">3</string>
    <string name="pad_numerico_4">4</string>
    <string name="pad_numerico_5">5</string>
    <string name="pad_numerico_6">6</string>
    <string name="pad_numerico_7">7</string>
    <string name="pad_numerico_8">8</string>
    <string name="pad_numerico_9">9</string>
    <string name="pad_numerico_clear">C</string>
    <string name="pad_numerico_cambiarnumeronota">CambiarNumeroNota</string>
    <string name="ventana_teclado_dialog_borrar">Borrar</string>
    <string name="ventana_teclado_dialog_cerrar">Ok</string>
    <string name="sudoku_name">SUDOKU</string>
    <string name="tres_en_raya_name">TRES EN RAYA</string>
    <string name="ayuda_name">INFO</string>
    <string name="opciones_name">OPCIONES</string>
    <string name="salir_main">Salir</string>

    <string name="otra_partida">OTRA PARTIDA</string>
    <string name="tu_turno">Tu turno</string>
    <string name="turno_j1">Turno del jugador 1</string>
    <string name="turno_j2">Turno del jugador 2</string>
    <string name="has_ganado">Has ganado</string>
    <string name="has_perdido">Has perdido</string>
    <string name="empate">Empate</string>
    <string name="gana_j1">Gana el jugador 1</string>
    <string name="gana_j2">Gana el jugador 2</string>
    <string name="pensando">Pensando</string>
    <string name="options_habilitar_musica">Habilitar música</string>
    <string name="cambiar_nombre_de_usuario">Cambiar nombre de usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="modeAILimited">Contra el robot</string>
    <string name="modeAIInfinite">Contra el robot hasta la victoria</string>
    <string name="mode1v1Limited">1 contra 1</string>
    <string name="mode1v1Infinite">1 contra 1 hasta la victoria</string>
    <string name="modo_de_juego">Modo de juego</string>
    <string name="jugar">Jugar</string>
    <string name="tres_en_raya">Tres en raya</string>
    <string name="bt1">bt1</string>
    <string name="bt2">bt2</string>

    <string-array name="spDificultad">
        <item>Muy Fácil</item>
        <item>Fácil</item>
        <item>Media</item>
        <item>Difícil</item>
        <item>Muy Difícil</item>
    </string-array>
</resources>
