<?xml version="1.0" encoding="utf-8"?>


<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_3" />

        <Button
            android:id="@+id/button_4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_5" />

        <ImageButton
            android:id="@+id/cambiar_num_nota"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/pad_numerico_cambiarnumeronota"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_6" />

        <Button
            android:id="@+id/button_7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_7" />

        <Button
            android:id="@+id/button_8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_9" />

        <Button
            android:id="@+id/button_clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/pad_numerico_clear" />

        <Button
            android:id="@+id/cambiarModo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
