<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sudoku.SudokuOptionsActivity">


    <TextView
        android:id="@+id/txtTictactoe"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/tres_en_raya"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="308dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModeTictactoe"
        app:layout_constraintVertical_bias="0.06999999">

        <RadioButton
            android:id="@+id/rdAILimited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeAILimited"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdAIInfinite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeAIInfinite"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd1v1Limited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode1v1Limited"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd1v1Infinite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode1v1Infinite"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtModeTictactoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_de_juego"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/btPlayTicTacToe"
        android:layout_width="208dp"
        android:layout_height="57dp"
        android:background="@drawable/init_button"
        android:text="@string/jugar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.29000002" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTictactoe"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>