<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"

    tools:context=".ui.MainActivity">


    <Button
        android:id="@+id/buttonSudoku"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/init_button"
        android:text="@string/sudoku_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/buttonTicTacToe"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/init_button"
        android:text="@string/tres_en_raya_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnlace"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/init_button_options"
        android:text="@string/opciones_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnlaceAlba"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/init_button_options"
        android:text="@string/ayuda_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOptions"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>