<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.efe.games.ui.tictactoe.TicTacToeView
        android:id="@+id/ticTacToeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/board0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/board3"
        app:layout_constraintEnd_toStartOf="@+id/board1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt1" />

    <ImageButton
        android:id="@+id/board1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/board4"
        app:layout_constraintEnd_toStartOf="@+id/board2"
        app:layout_constraintStart_toEndOf="@+id/board0"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2" />

    <ImageButton
        android:id="@+id/board2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/board5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/board1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/board6"
        app:layout_constraintEnd_toStartOf="@+id/board4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board0"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/board7"
        app:layout_constraintEnd_toStartOf="@+id/board5"
        app:layout_constraintStart_toEndOf="@+id/board3"
        app:layout_constraintTop_toBottomOf="@+id/board1"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/board4"
        app:layout_constraintTop_toBottomOf="@+id/board2"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/board7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board3"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/board8"
        app:layout_constraintStart_toEndOf="@+id/board6"
        app:layout_constraintTop_toBottomOf="@+id/board4"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <ImageButton
        android:id="@+id/board8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/board7"
        app:layout_constraintTop_toBottomOf="@+id/board5"
        app:srcCompat="@drawable/ic_clean"
        android:contentDescription="@string/bt2"/>

    <Button
        android:id="@+id/btRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/otra_partida"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticTacToeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStatus"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu_turno"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticTacToeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board7"
        app:layout_constraintVertical_bias="0.179" />

</androidx.constraintlayout.widget.ConstraintLayout>